<!--
    Chris Bowles, Victor Perez, Russell Templet, Nishika Malhotra, Maria Velasquez
    Comp 680, Team 2, Spring 2015, Prof. Boctor
    submit_activity.xml
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/background"
                tools:context=".SubmitActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="#000000"
        android:text="@string/submit_title"
        android:id="@+id/submitTextViewTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#000000"
        android:text="@string/submit_description"
        android:id="@+id/submitTextViewComment"
        android:layout_below="@+id/submitTextViewTitle"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/submitNameTextView"
        android:labelFor="@+id/submitNameTextView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#000000"
        android:text="@string/submit_score"
        android:id="@+id/scoreTextView"
        android:layout_below="@+id/submitNameTextView"
        android:layout_centerHorizontal="true"/>

    <!-- Sign in bar -->
    <LinearLayout android:id="@+id/sign_in_bar" style="@style/SignInOutBar"
        android:layout_above="@+id/buttonsBar">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/button_sign_in" style="@style/SignInButton" />

        <TextView style="@style/SignInOutBarBlurb" android:text="@string/sign_in_explanation" />
    </LinearLayout>

    <!-- Sign out bar -->
    <LinearLayout android:id="@+id/sign_out_bar" style="@style/SignInOutBar"
        android:visibility="gone"
        android:layout_above="@+id/buttonsBar">

        <TextView style="@style/SignInOutBarBlurb"
            android:text="@string/you_are_signed_in" />

        <Button style="@style/SignOutButton" android:id="@+id/button_sign_out"
            android:text="@string/sign_out" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_send_button"
            android:id="@+id/submitButton"
            android:visibility="visible"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submit_send_google_button"
            android:text="@string/sendToGoogleButtonText"
            android:visibility="gone"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/leaderboardButton"
            android:text="@string/leaderboardButton_text"
            android:enabled="false"/>
    </LinearLayout>


</RelativeLayout>