<!--
    Chris Bowles, Victor Perez, Russell Templet, Nishika Malhotra, Maria Velasquez
    Comp 680, Team 2, Spring 2015, Prof. Boctor
    play_activity.xml
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".PlayActivity">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/playMapFragment"
              android:name="com.google.android.gms.maps.SupportMapFragment"
              tools:context=".PlayActivity"/>

    <LinearLayout
        android:id="@+id/playLinearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#96000000"
        android:layout_alignParentTop="true"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:text="@string/time_text"
                android:id="@+id/playTextView1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="12sp"
                android:textColor="#000000"
                android:text="@string/difficulty_text"
                android:id="@+id/playTextView2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:text="@string/score_text"
                android:id="@+id/playTextView3"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_question_button"
        android:id="@+id/playButton1"
        android:layout_above="@+id/playTextView4"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#96ff0000"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:text="@string/trivia_text"
        android:id="@+id/playTextView4"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>

</RelativeLayout>