<!--
    Chris Bowles, Victor Perez, Russell Templet, Nishika Malhotra, Maria Velasquez
    Comp 680, Team 2, Spring 2015, Prof. Boctor
    credits_activity.xml
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/background"
                tools:context=".CreditsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="#000000"
        android:text="@string/credits_title"
        android:id="@+id/creditsTextView1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>

    <ScrollView
        android:id="@+id/creditsScrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/creditsTextView1"
        android:layout_above="@+id/creditsLinearLayout1"
        android:scrollbars="vertical"
        android:fillViewport="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#000000"
            android:text="@string/credits_description"
            android:id="@+id/creditsTextView2"
            android:gravity="center"/>
    </ScrollView>

    <LinearLayout
        android:id="@+id/creditsLinearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credits_website_button"
                android:id="@+id/creditsButton1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/references_title"
                android:id="@+id/creditsButton2"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>